--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   </title>
   <meta charset="utf-8">
  </head>
+<style type="text/css">
+ h1{
+    text-align:center;
+   }
+</style>
  <body>
   <h1>Hi</h1>
  </body>
